# speech-to-text-desktop

./: .env.example  .gitignore  Makefile  gemini_agent.py  pyproject.toml  requirements.txt
tests/: conftest.py  integration_test.py  test_audio.py  test_config.py  test_copy.py  test_hotkeys.py  test_long_transcription.py  test_paste.py  test_streaming.py  test_stt.py  test_tts.py
tests/integration/: test_api.py
voice_agent/: __init__.py  __main__.py  app.py  audio.py  config.py  hotkeys.py  platform_macos.py  stt.py  tts.py
